# selfmade_survey

./: README.md  pyproject.toml
selfmade_survey/: hooks.py  modules.txt
selfmade_survey/config/: desktop.py  docs.py
selfmade_survey/fixtures/: survey.json  web_form.json
selfmade_survey/public/: survey_builder.js  survey_display.js
selfmade_survey/public/css/: survey.min.css
selfmade_survey/public/js/: survey.jquery.min.js  survey_web_form.js
selfmade_survey/report/survey_completion_rates/: survey_completion_rates.json  survey_completion_rates.py
selfmade_survey/report/survey_response_analysis/: survey_response_analysis.json  survey_response_analysis.py
selfmade_survey/selfmade_survey/api/: survey_form.py  survey_response.py
selfmade_survey/selfmade_survey/doctype/survey/: survey.js  survey.json  survey.py  test_survey.py
selfmade_survey/selfmade_survey/doctype/survey_question/: survey_question.js  survey_question.json  survey_question.py  test_survey_question.py
selfmade_survey/selfmade_survey/doctype/survey_response/: survey_response.js  survey_response.json  survey_response.py  test_survey_response.py
selfmade_survey/selfmade_survey/doctype/survey_template/: survey_template.js  survey_template.json
selfmade_survey/workspace/selfmade_survey/: selfmade_survey.json
selfmade_survey/www/: sample.html  sample.js
